Make navbar responsive and improve logo placement

--- a/pages/customer-service.html
+++ b/pages/customer-service.html
@@ -296,5 +296,6 @@
             setTimeout(animateCounters, 1000);
         });
     </script>
+    <script src="main.js"></script>
 </body>
 </html>
