--- a/pages/it.html
+++ b/pages/it.html
@@ -130,5 +130,6 @@
             <p>&copy; 2024 Yazaki Morocco. All rights reserved.</p>
         </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
