--- a/pages/logistics.html
+++ b/pages/logistics.html
@@ -228,5 +228,6 @@
         // Update metrics every 30 seconds
         setInterval(updateMetrics, 30000);
     </script>
+    <script src="main.js"></script>
 </body>
 </html>
