--- a/pages/procurement.html
+++ b/pages/procurement.html
@@ -202,5 +202,6 @@
             <p>&copy; 2024 Yazaki Morocco. All rights reserved. | Procurement Excellence Through Strategic Partnership</p>
         </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
