--- a/pages/3pl.html
+++ b/pages/3pl.html
@@ -293,5 +293,6 @@
             setTimeout(animateCounters, 1000);
         });
     </script>
+    <script src="main.js"></script>
 </body>
 </html>
