--- a/pages/fret.html
+++ b/pages/fret.html
@@ -340,5 +340,6 @@
             setTimeout(animateCounters, 1000);
         });
     </script>
+    <script src="main.js"></script>
 </body>
 </html>
