--- a/pages/hr.html
+++ b/pages/hr.html
@@ -274,5 +274,6 @@
             setTimeout(animateCounters, 1000);
         });
     </script>
+    <script src="main.js"></script>
 </body>
 </html>
