--- a/pages/quality.html
+++ b/pages/quality.html
@@ -321,5 +321,6 @@
             setTimeout(animateCounters, 1000);
         });
     </script>
+    <script src="main.js"></script>
 </body>
 </html>
