--- a/pages/bsc.html
+++ b/pages/bsc.html
@@ -318,8 +318,8 @@
         </div>
     </section>
     <section>
-        <img src="/Users/mac/Desktop/trial/assets/photo2.jpg">
-        <img src="/Users/mac/Desktop/trial/assets/photo1.jpg">
+        <img src="../assets/photo2.jpg" alt="Photo 2">
+        <img src="../assets/photo1.jpg" alt="Photo 1">
     </section>
 
     <!-- Footer -->
