Make navbar responsive and improve logo placement

--- a/pages/bsc.html
+++ b/pages/bsc.html
@@ -317,7 +317,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="fullscreen-section">
         <img src="../assets/photo2.jpg" alt="Photo 2">
         <img src="../assets/photo1.jpg" alt="Photo 1">
     </section>
