--- a/pages/bsc.html
+++ b/pages/bsc.html
@@ -319,9 +319,10 @@
     </section>
     <section class="fullscreen-section">
         <img src="../assets/photo2.jpg" alt="Photo 2">
+    </section>
+    <section class="fullscreen-section">
         <img src="../assets/photo1.jpg" alt="Photo 1">
     </section>
-
     <!-- Footer -->
     <footer class="footer" style="position: relative;">
         <div class="container">
